src/objects/Stop__c.object
<CustomObject>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Parent_Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Station</label>
        <referenceTo>Stop__c</referenceTo>
        <relationshipLabel>Child Stops</relationshipLabel>
        <relationshipName>Child_Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stop_Code__c</fullName>
        <externalId>true</externalId>
        <label>Stop Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Description__c</fullName>
        <label>Stop Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Name__c</fullName>
        <label>Stop Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_URL__c</fullName>
        <label>Stop URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wheelchair_Boarding__c</fullName>
        <label>Wheelchair Boarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_ID__c</fullName>
        <label>Zone ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Stop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Stop_Name__c</columns>
        <columns>Stop_Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stop ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>